--- a/algorithm/List_251129.md
+++ b/algorithm/List_251129.md
@@ -100,81 +100,251 @@
         }
     }
     ```
+
+---
+## 선택정렬
+- 주어진 자료들 중 가장 작은 값의 원소부터 차례대로 선택하여 위치 교환
+    ### 과정
+    1. 주어진 리스트 중에서 최소값을 찾기
+    2. 그 값을 리스트의 맨 앞에 위치한 값과 교환
+    3. 맨 처음 위리츨 제외한 나머지 리스트를 대상으로 위의 과정을 반복
+    ```python
+    # python
+    def selection_sort(arr):
+        len_arr = len(arr)
+
+        for i in range(len_arr - 1):
+            min_idx = i
+            for j in range(i + 1, len_arr):
+                if arr[j] < arr[min_idx]:
+                    min_idx = j
+            arr[i], arr[min_idx] = arr[min_idx], arr[i]
+    ```
+    ```C++
+    // C++
+    #include <iostream>
+    #include <vector>
+
+    using namespace std;
+
+    void selection_sort(vector<int>& arr)
+    {
+        int min_idx = 0;
+        int len_arr = arr.size();
+        int temp = 0;
+
+        for (int i = 0; i < len_arr - 1 ; i++)
+        {
+            min_idx = i;
+
+            for (int j = i + 1; j < len_arr ; j ++)
+            {
+                if (arr[j] < arr[min_idx])
+                {
+                    min_idx = j;
+                }
+            }
+
+            temp = arr[i];
+            arr[i] = arr[min_idx];
+            arr[min_idx] = temp;
+        }
+    }
+    ```
+
+---
+## 셀렉션 알고리즘 
+- 저장되어 있는 자료로부터 k번째로 큰 혹은 작은 원소를 찾는 방법
+- 최소값, 최대값, 중간값을 찾는 알고리즘과 동일
+- 🚨 k가 비교적 작을 때 유용
+    ### 과정
+    1. 1번부터 k번째까지 작은 원소들을 찾아 배열 앞쪽으로 이동
+    2. 배열의 k번째 반환
+    ```python
+    # python
+    def select(arr, k):
+        len_arr = len(arr)
+
+        for i in range(k):
+            min_idx = i
+            for j in range(i + 1, len_arr):
+                if arr[j] < arr[min_idx]:
+                    min_idx = j
+            arr[i], arr[min_idx] = arr[min_idx], arr[i]
+
+        return arr[k - 1]
+    ```
+    ```C++
+    // C++
+    #include <iosteam>
+    #include <vector>
+
+    using namespace std;
+
+    int select(vector<int>& arr, int k)
+    {
+        int min_idx = 0;
+        int len_arr = arr.size();
+        int temp = 0;
+
+        for (int i = 0; i < k; i++)
+        {
+            min_idx = i;
+            
+            for (int j = i + 1; j < len_arr; j++)
+            {
+                if (arr[j] < arr[min_idx])
+                {
+                    min_idx = j;
+                }
+            }
+
+            temp = arr[i];
+            arr[i] = arr[min_idx];
+            arr[min_idx] = temp;
+        }
+
+        return arr[k - 1];
+    }
+    ```
+
 ---
 ## 2차원 배열
-### 입력
-```python
-# python
-"""
-입력 예시 1.
-3
-1 2 3
-4 5 6
-7 8 9
-"""
-n = int(input())
-arr = [list(map(int, input().split())) for _ in range(n)]
+- 델타로 많이 응용 (문제를 많이 풀 것)
+    ### 입력
+    ```python
+    # python
+    """
+    입력 예시 1.
+    3
+    1 2 3
+    4 5 6
+    7 8 9
+    """
+    n = int(input())
+    arr = [list(map(int, input().split())) for _ in range(n)]
 
-"""
-입력 예시 2.
-3
-123
-456
-789
-"""
-n = int(input())
-arr = [list(map(int, input())) for _ in range(n)]
-```
-```C++
-// C++
-#include <vector>
-#include <iostream>
+    """
+    입력 예시 2.
+    3
+    123
+    456
+    789
+    """
+    n = int(input())
+    arr = [list(map(int, input())) for _ in range(n)]
+    ```
+    ```C++
+    // C++
+    #include <vector>
+    #include <iostream>
 
-using namespace std;
+    using namespace std;
 
-int main()
-{
-    // n 입력 받기
-    int n;
-    cin >> n;
-
-    // n x n 크기 2차원 벡터 선언
-    vector<vector<int>> arr(n, vector<int>(n));
-
-    // n 줄에 걸쳐 n개의 정수 입력
-    for (int i = 0; i < n ; ++i)
+    int main()
     {
-        for (int j = 0; j < n; ++j)
+        // n 입력 받기
+        int n;
+        cin >> n;
+
+        // n x n 크기 2차원 벡터 선언
+        vector<vector<int>> arr(n, vector<int>(n));
+
+        // n 줄에 걸쳐 n개의 정수 입력
+        for (int i = 0; i < n ; ++i)
         {
-            // cin은 공백(스페이스, 엔터)을 무시하고 다음 정수 찾음
-            cin >> arr[i][j]
+            for (int j = 0; j < n; ++j)
+            {
+                // cin은 공백(스페이스, 엔터)을 무시하고 다음 정수 찾음
+                cin >> arr[i][j]
+            }
         }
-    }
 
-    int n;
-    cin >> n;
+        int n;
+        cin >> n;
 
-    // N x N 크기의 2차원 벡터(배열) 선언
-    std::vector<std::vector<int>> arr(n, std::vector<int>(n));
-    std::string line;
+        // N x N 크기의 2차원 벡터(배열) 선언
+        vector<vector<int>> arr(n, vector<int>(n));
+        string line;
 
-    // cin으로 N을 읽고 나면, 바로 다음에 개행 문자(\n)가 남아있습니다.
-    // getline을 사용하려면 이 개행 문자를 제거해야 합니다.
-    std::getline(std::cin, line); 
+        // cin으로 N을 읽고 나면, 바로 다음에 개행 문자(\n)가 남아있습니다.
+        // getline을 사용하려면 이 개행 문자를 제거해야 합니다.
+        getline(cin, line); 
 
-    // N줄에 걸쳐 문자열로 입력받고 처리
-    for (int i = 0; i < n; ++i)
-    {
-        // 한 줄 전체를 문자열로 읽습니다. (예: "456")
-        std::getline(std::cin, line); 
+        // N줄에 걸쳐 문자열로 입력받고 처리
+        for (int i = 0; i < n; ++i)
+        {
+            // 한 줄 전체를 문자열로 읽습니다. (예: "456")
+            getline(cin, line); 
         
-        for (int j = 0; j < n; ++j)
-        {
-            // 문자열의 j번째 문자를 정수로 변환
-            // C++에서 '0' ~ '9' 문자는 아스키 코드 순서대로 정렬되어 있습니다.
-            // 따라서 문자 '4'에서 문자 '0'의 아스키 값을 빼면 정수 4가 됩니다.
-            arr[i][j] = line[j] - '0';
+            for (int j = 0; j < n; ++j)
+            {
+                // 문자열의 j번째 문자를 정수로 변환
+                // C++에서 '0' ~ '9' 문자는 아스키 코드 순서대로 정렬되어 있습니다.
+                // 따라서 문자 '4'에서 문자 '0'의 아스키 값을 빼면 정수 4가 됩니다.
+                arr[i][j] = line[j] - '0';
+            }
         }
     }
-}
-```
+    ```
+
+---
+## 이진 검색
+- 자료의 가운데에 있는 항목의 키 값과 비교하고 다음 검색 위치를 결저하여 검색 반복
+- 🚨 자료가 정렬되어 있는 상태에서만 활용 가능
+- 시간복잡도: O(log n)
+
+    ### 과정
+    1. 자료의 중앙에 있는 원소 선택
+    2. 중앙 원소의 값과 찾고자 하는 목표 값을 비교
+    3. 목표 값이 중앙 원소의 값보다 작으면 자료 왼쪽 절반에 대해 새로 검색 수행, 크다면 자료의 오른쪽 절반에 대해 새로 검색 수행
+    4. 찾고자 하는 값을 찾을 때까지 반복
+    ```python
+    # python
+    def binary_search(arr, target):
+        start = 0
+        end = len(arr) - 1
+
+        while start <= end:
+            mid = (start + end) // 2
+            if target < arr[mid]:
+                end = mid - 1
+            elif target > arr[mid]:
+                start = mid + 1
+            else:
+                return mid
+        return false
+    ```
+    ```C++
+    // C++
+    #include <iostream>
+    #include <vector>
+
+    using namespace std;
+
+    int binary_search(vector<int> arr, int target)
+    {
+        int start = 0;
+        int end = arr.size() - 1;
+
+        while (start <= end)
+        {
+            int mid = (start + end) / 2;
+            
+            if (target < arr[mid])
+            {
+                end = mid - 1;
+            }
+            else if (target > arr[mid])
+            {
+                start = mid + 1;
+            }
+            else
+            {
+                return mid;
+            }
+        }
+
+        return -1;
+    }
+    ```
