DP: 재귀호출,메모이제이션,동적계획법,DP테이블

--- a/algorithm/3. DynamicProgramming_251201.md
+++ b/algorithm/3. DynamicProgramming_251201.md
@@ -135,4 +135,71 @@
         memo[n] = fibo(n - 1) + memo(n - 2);
         return memo[n];
     }
-    ``
+    ```
+## 동적 계획법(Dynamic Programming)
+- 복잡한 문제를 여러 개의 작은 부분 문제로 나눈 다음, 이 부분 문제들의 해답을 계산하고 저장(메모이제이션)하여 나중에 동일한 부분 문제가 발생했을 때 저장된 결과를 재활용함으로써 효율적으로 문제를 해결하는 알고리즘 설계 기법
+
+**1. 적용 조건**
+- **최적 부분 구조**: 큰 문제의 최적 해답이 작은 부분 문제의 최적 해답들로부터 얻어질 수 있어야함
+- **중복되는 부분 문제**: 문제를 재귀적으로 나눌 때, 동일한 작은 부분 문제가 반복해서 나타나야함
+
+**2. 해결 방법론**
+|방법|설명|구현 방식|특징|
+|:---|:---|:---|:---|
+|하향식 (Top-Down)|큰 문제 ➡ 작은 문제로 재귀 호출, 결과 계산 시 메모이제이션을 통해 저장|재귀 + 메모이제이션|장점: 직관적, 코드 간결 / 단점: 재귀 호출 오버헤드|
+|상향식 (Bottom-Up)|작은 문제 ➡ 큰 문제, 점진적으로 더 큰 문제의 해답을 계산하고 테이블에 저장|반복문 + DP 테이블|장점: 오버헤트 없음, 빠름|
+
+---
+
+## DP 테이블
+동적 계획법에서 상향식 방식으로 문제를 해결할 때, 계산된 부분 문제들의 **해답을 저장하고 관리**하기 위해 사용되는 **배열 또는 표**
+
+**1. 구조 및 명칭**
+- 구조: 보통 1차원 또는 2차원 배열
+- 저장 내용: 각 셀 또는 문제의 특정 상태에 대한 최적의 해답 저장
+
+**2. 작동 방식(상향식)**
+1. 테이블 초기화: 가장 작은 문제의 해답을 테이블의 초반 셀에 직접 채우기
+2. 반복 계산: 반복문을 사용하여 작은 문제의 해답을 참고하여 점진적으로 더 큰 문제의 해답을 계산
+3. 결과 저장: 계산된 해답을 해당 인덱스의 테이블 셀에 저장
+4. 최종 반환: 테이블의 마지막 셀에 저장된 값이 최종 문제의 해답
+
+**하향식 vs 상향식**
+|특징|상향식(DP 테이블)|하향식(메모이제이션)|
+|:---|:---|:---|
+|구현방식|반복문(for loop)|재귀 호출|
+|계산순서|작은문제부터 큰 문제로 **순차적** 계산|큰 문제에서 시작, **필요한 부분 문제만 계산**|
+|저장소|DP 테이블|캐시 또는 딕셔너리|
+
+```python
+# python
+# 상향식 피보나치 수열 함수
+def fibo(n):
+    dptable = [0] * (n + 1)
+    dptable[0] = 0
+    dptable[1] = 1
+
+    for i in range(2, n + 1):
+        dptable[i] = dptable[i - 2] + dptable[i - 1]
+
+    return dptable[n]
+```
+```C++
+// C++
+#include <iostream>
+#include <vector>
+
+int fibo(int n)
+{
+    vector<int> dptable(n + 1, 0);
+    dptable[0] = 0;
+    dptable[1] = 1;
+
+    for (int i = 2; i < n + 1; i++)
+    {
+        dptable[i] = dptable[i - 1] + dptable[i - 2];
+    }
+
+    return dptable[n];
+}
+```
