--- a/algorithm/1. List_251202(python).ipynb
+++ b/algorithm/1. List_251202(python).ipynb
@@ -38,30 +38,231 @@
    "outputs": [],
    "source": [
     "# 1206. [S/W 문제해결 기본] 1일차 - View\n",
-    "# 고쳐라\n",
+    "# 사실 max() 쓰면 nears 만들 필요 없음\n",
     "T = 10\n",
-    "VISIBLE_DIS = 2\n",
-    "\n",
     "for test_case in range(1, T + 1):\n",
-    "    n = int(input()) # 건물 개수 (4 <= n <= 1000)\n",
-    "    heights = list(map(int, input().split())) # 건물 높이 (0 <= height <= 255)\n",
-    "    visible = 0 # 조망권이 있는 세대 개수\n",
+    "    n = int(input()) # 건물 개수\n",
+    "    heights = list(map(int, input().split())) # 건물 높이\n",
+    "    result = 0\n",
     "\n",
     "    for i in range(n):\n",
-    "        if not heights[i]: # 높이 = 0이면 건물 없으므로 pass\n",
+    "        # 맨 왼쪽 두칸, 맨 오른쪽 두칸 제외\n",
+    "        if heights[i] == 0:\n",
     "            continue\n",
     "\n",
     "        center = heights[i]\n",
-    "        near_height = 0\n",
-    "        for j in range(1, VISIBLE_DIS + 1):\n",
-    "            if center < heights[i - j] or center < heights[i + j]:\n",
-    "                break\n",
-    "            \n",
-    "            max(near_height, heights[i - j], heights[i + j])\n",
-    "        else:\n",
-    "            visible += center - near_height\n",
+    "        nears =  [\n",
+    "            heights[i - 2], \n",
+    "            heights[i - 1],\n",
+    "            heights[i + 1],\n",
+    "            heights[i + 2]\n",
+    "        ]\n",
     "\n",
-    "    print(f'#{test_case} {visible}')"
+    "        max_near = 0\n",
+    "        for near in nears:\n",
+    "            if max_near < near:\n",
+    "                max_near = near\n",
+    "\n",
+    "        if max_near < center:\n",
+    "            result += center - max_near\n",
+    "    \n",
+    "    print(f'#{test_case} {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "25417c03",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 24735. Gravity\n",
+    "# 낙하할 수 있는 공간 = 오른쪽 벽까지 공간 중 다른 상자에 의해 가로 막히지 않는 공간\n",
+    "# 가로 막히지 않는 공간 = 상자 높이 보다 낮은 높이의 상자 개수\n",
+    "\n",
+    "T = 1\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n = int(input()) # 박스가 높인 가로 칸의 수\n",
+    "    boxes = list(map(int, input().split())) # 각 칸의 상자 높이\n",
+    "\n",
+    "    max_overlap = 0\n",
+    "    for i in range(n):\n",
+    "        now_box = boxes[i]\n",
+    "        overlap = 0\n",
+    "        for j in range(i, n):\n",
+    "            if boxes[j] < now_box:\n",
+    "                overlap += 1\n",
+    "\n",
+    "        if max_overlap < overlap:\n",
+    "            max_overlap = overlap\n",
+    "    \n",
+    "    print(max_overlap)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b2d85f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 24760. Baby Gin\n",
+    "# run: 3장의 카드가 연속적인 번호를 갖는 경우\n",
+    "# triplet: 3장의 카드가 동일한 번호를 갖는 경우\n",
+    "# baby-gin: 6장의 카드가 run과 triplet으로 구성된 경우\n",
+    "\n",
+    "T = int(input())\n",
+    "CARD_NUM = 10 # 0 ~ 9 사이의 카드\n",
+    "\n",
+    "for test_case in range(1, T + 1):\n",
+    "    cards = input().strip()\n",
+    "    card_count = [0] * CARD_NUM\n",
+    "\n",
+    "    # 어떤 카드 있는지 탐색\n",
+    "    for card in cards:\n",
+    "        card_count[int(card)] += 1\n",
+    "\n",
+    "    idx = 0\n",
+    "    triplet = 0\n",
+    "    card_run = 0 # 해당 문제 변수명 run 사용 불가\n",
+    "\n",
+    "    # 한 카드에서 모든 경우의 수를 다 찾아야함 주의!!!!!!!!!!!\n",
+    "    # 예) 1 2 3 1 2 3\n",
+    "    while idx < CARD_NUM:\n",
+    "\n",
+    "        # triplet 할 수 있는 상황\n",
+    "        if card_count[idx] >= 3: \n",
+    "            triplet += 1\n",
+    "            card_count[idx]-= 3\n",
+    "            continue\n",
+    "\n",
+    "        # run할 수 있는 상황\n",
+    "        if idx + 2 < 10 and card_count[idx] >= 1 and card_count[idx + 1] >= 1 and card_count[idx + 2] >= 1:\n",
+    "            card_run += 1\n",
+    "            card_count[idx] -= 1\n",
+    "            card_count[idx + 1] -= 1\n",
+    "            card_count[idx + 2] -= 1\n",
+    "            continue\n",
+    "        \n",
+    "        idx += 1\n",
+    "    \n",
+    "    if triplet + card_run == 2:\n",
+    "        print(f'#{test_case} Baby Gin')\n",
+    "    else:\n",
+    "        print(f'#{test_case} Lose')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6968869f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16192. 전기버스\n",
+    "# 최소한 몇 번의 충전을 해야 종점에 도착할 수 있는가?\n",
+    "# 출발지에는 항상 충전기가 설치되어 있지만 충전횟수에는 포함하지 않는다\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    k,n,m = map(int, input().split()) # k: 이동거리, n: 종점, m: 충전소 개수\n",
+    "    chargers = list(map(int, input().split()))\n",
+    "    road = [0] * (n + 1)\n",
+    "\n",
+    "    # 충전기 있는 곳 표시\n",
+    "    for charger in chargers:\n",
+    "        road[charger] = 1\n",
+    "\n",
+    "    result = 0\n",
+    "    now = 0\n",
+    "    while True:\n",
+    "\n",
+    "        if now + k >= n:\n",
+    "            break\n",
+    "        \n",
+    "        if road[now + k]: # 충전기가 있다\n",
+    "            now += k\n",
+    "            result += 1\n",
+    "\n",
+    "        else: # 충전기가 없다\n",
+    "            for i in range(now + k - 1, now, -1): # 충전소 있는 곳 찾기\n",
+    "                if road[i]:\n",
+    "                    now = i\n",
+    "                    result += 1\n",
+    "                    break\n",
+    "            else:\n",
+    "                result = 0\n",
+    "                break\n",
+    "    \n",
+    "    print(f'#{test_case} {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b1c440b8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16191. 숫자카드\n",
+    "\n",
+    "CARD_NUM = 10\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n = int(input()) # 카드 장수\n",
+    "    cards = input()\n",
+    "\n",
+    "    card_count = [0] * CARD_NUM # 0~9까지 카드 존재\n",
+    "    for card in cards:\n",
+    "        card_count[int(card)] += 1\n",
+    "    \n",
+    "    max_num = 0\n",
+    "    max_card = 0\n",
+    "    for i in range(CARD_NUM):\n",
+    "        if max_num <= card_count[i]: # 같을 때는 숫자가 큰 수를 출력해야함\n",
+    "            max_card = i\n",
+    "            max_num = card_count[i]\n",
+    "    \n",
+    "    print(f'#{test_case} {max_card} {max_num}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1745acca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 9386. 연속한 1의 개수\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n = int(input()) # 수열의 길이\n",
+    "    nums = input() # 수열\n",
+    "\n",
+    "    one_num = 0\n",
+    "    one_max = 0\n",
+    "    for num in nums:\n",
+    "        \n",
+    "        if int(num) == 0:\n",
+    "            one_num = 0\n",
+    "\n",
+    "        else: # num == 1\n",
+    "            one_num += 1\n",
+    "\n",
+    "            if one_max < one_num: one_max = one_num\n",
+    "\n",
+    "    print(f'#{test_case} {one_max}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70622347",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 6485. 삼성시의 버스 노선"
    ]
   }
  ],
