--- a/algorithm/1. List_251202(python).ipynb
+++ b/algorithm/1. List_251202(python).ipynb
@@ -262,8 +262,229 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 6485. 삼성시의 버스 노선"
+    "# 6485. 삼성시의 버스 노선\n",
+    "\n",
+    "BUSSTOP_NUM = 5000\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n = int(input()) # 버스 노선 개수\n",
+    "    bus_stop = [0] * (BUSSTOP_NUM + 1)\n",
+    "\n",
+    "    # 노선 표시\n",
+    "    for i in range(n):\n",
+    "        a, b = map(int, input().split())\n",
+    "        for j in range(a, b + 1):\n",
+    "            bus_stop[j] += 1\n",
+    "\n",
+    "    # 노선 개수 출력\n",
+    "    p = int(input())\n",
+    "    print(f'#{test_case}', end=' ')\n",
+    "    for i in range(p):\n",
+    "        stop = int(input())\n",
+    "        print(bus_stop[stop], end=' ')\n",
+    "    print()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2f3be3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 간단한 소인수분해\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    num = int(input())\n",
+    "    base = [2,3,5,7,11]\n",
+    "    exp = [0] * len(base)\n",
+    "\n",
+    "    # 지수 계산\n",
+    "    for i in range(len(base)):\n",
+    "\n",
+    "        while num % base[i] == 0:\n",
+    "            exp[i] += 1\n",
+    "            num //= base[i]\n",
+    "    \n",
+    "    # 지수 출력\n",
+    "    print(f'#{test_case}', end=' ')\n",
+    "    for num in exp:\n",
+    "        print(num, end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3ddfc766",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1208. Flatten\n",
+    "\n",
+    "T = 10\n",
+    "for test_case in range(1, T + 1):\n",
+    "    dump = int(input())\n",
+    "    heights = list(map(int, input().split()))\n",
+    "\n",
+    "    for _ in range(dump):\n",
+    "        max_h = max(heights)\n",
+    "        min_h = min(heights)\n",
+    "\n",
+    "        if max_h - min_h <= 1:\n",
+    "            break\n",
+    "\n",
+    "        max_idx = heights.index(max_h)\n",
+    "        min_idx = heights.index(min_h)\n",
+    "\n",
+    "        # dump 작업\n",
+    "        heights[max_idx] -= 1\n",
+    "        heights[min_idx] += 1\n",
+    "\n",
+    "    max_h = max(heights)\n",
+    "    min_h = min(heights)\n",
+    "\n",
+    "    print(f'#{test_case} {max_h - min_h}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "094d90a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 24792. 정사각형 내부에 있는 정사각형의 개수\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n, m = map(int, input().split())\n",
+    "    board = [[0] * n for _ in range(n)]\n",
+    "\n",
+    "    num = 1\n",
+    "    for i in range(n - m + 1):\n",
+    "        for j in range(n - m + 1):\n",
+    "            for k in range(m):\n",
+    "                for l in range(m):\n",
+    "                    board[i + k][j + l] = num\n",
+    "            num += 1\n",
+    "    \n",
+    "    print(f'#{test_case}')\n",
+    "    for row in board:\n",
+    "        print(*row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28305ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16268. 풍선팡2\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n, m = map(int, input().split())\n",
+    "    board = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "    dir = [(-1, 0), (1, 0), (0, -1), (0, 1)] # 상하좌우\n",
+    "    max_flower = 0\n",
+    "    for y in range(n):\n",
+    "        for x in range(m):\n",
+    "            flower = 0\n",
+    "            flower += board[y][x]\n",
+    "            for dy,dx in dir:\n",
+    "                ny = y + dy\n",
+    "                nx = x + dx\n",
+    "                if 0 <= ny and ny < n and 0 <= nx and nx < m:\n",
+    "                    flower += board[ny][nx]\n",
+    "                \n",
+    "            if max_flower < flower:\n",
+    "                max_flower = flower\n",
+    "            \n",
+    "    print(f'#{test_case} {max_flower}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "536d6fe3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16260. 색칠하기\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n = int(input()) # 칠할 영역 개수\n",
+    "    board = [[0] * 10 for _ in range(10)]\n",
+    "\n",
+    "    result = 0\n",
+    "    for _ in range(n):\n",
+    "        r1,c1,r2,c2,color = map(int, input().split())\n",
+    "        for i in range(r1, r2 + 1):\n",
+    "            for j in range(c1, c2 + 1):\n",
+    "                board[i][j] += color\n",
+    "\n",
+    "                if board[i][j] == 3:\n",
+    "                    result += 1\n",
+    "\n",
+    "    print(f'#{test_case} {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3c06bd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 12712. 파리퇴치3\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n, m = map(int, input().split()) # n: 배열 크기, m: 분사 거리\n",
+    "    fly = [list(map(int, input().split())) for _ in range(n)]\n",
+    "\n",
+    "    plus_shape = [(-1, 0), (1, 0), (0, -1), (0, 1)] # 상하좌우\n",
+    "    x_shape= [(-1, -1), (-1, 1), (1, -1), (1, 1)]\n",
+    "    \n",
+    "    for y in range(n):\n",
+    "        for x in range(n):\n",
+    "            plus_die = fly[y][x]\n",
+    "            x_die = fly[y][x]\n",
+    "\n",
+    "            # 죽은 파리 세기\n",
+    "            for dis in range(m - 1):\n",
+    "                # plus\n",
+    "                for dy, dx in plus_shape:\n",
+    "                    ny = y + (dy * dis)\n",
+    "                    nx = x + (dx * dis)\n",
+    "                    if 0 <= ny and ny < n and 0 <= nx and nx < n:\n",
+    "                        plus_die += fly[ny][nx]\n",
+    "\n",
+    "                # x\n",
+    "                for dy, dx in x_shape:\n",
+    "                    ny = y + (dy * dis)\n",
+    "                    nx = x + (dx * dis)\n",
+    "                    if 0 <= ny and ny < n and 0 <= nx and nx < n:\n",
+    "                        x_die += fly[ny][nx]\n",
+    "            \n",
+    "            max_die = max(plus_die, x_die)\n",
+    "    \n",
+    "    print(f'#{test_case} {max_die}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9f4f41e8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
