--- a/algorithm/1. List_251202(python).ipynb
+++ b/algorithm/1. List_251202(python).ipynb
@@ -451,29 +451,31 @@
     "\n",
     "    plus_shape = [(-1, 0), (1, 0), (0, -1), (0, 1)] # 상하좌우\n",
     "    x_shape= [(-1, -1), (-1, 1), (1, -1), (1, 1)]\n",
-    "    \n",
+    "\n",
+    "    max_die = 0\n",
     "    for y in range(n):\n",
     "        for x in range(n):\n",
     "            plus_die = fly[y][x]\n",
     "            x_die = fly[y][x]\n",
     "\n",
     "            # 죽은 파리 세기\n",
-    "            for dis in range(m - 1):\n",
+    "            for dis in range(1, m):\n",
     "                # plus\n",
     "                for dy, dx in plus_shape:\n",
     "                    ny = y + (dy * dis)\n",
     "                    nx = x + (dx * dis)\n",
-    "                    if 0 <= ny and ny < n and 0 <= nx and nx < n:\n",
+    "                    if 0 <= ny < n and 0 <= nx < n:\n",
     "                        plus_die += fly[ny][nx]\n",
     "\n",
     "                # x\n",
     "                for dy, dx in x_shape:\n",
     "                    ny = y + (dy * dis)\n",
     "                    nx = x + (dx * dis)\n",
-    "                    if 0 <= ny and ny < n and 0 <= nx and nx < n:\n",
+    "                    if 0 <= ny < n and 0 <= nx < n:\n",
     "                        x_die += fly[ny][nx]\n",
     "            \n",
-    "            max_die = max(plus_die, x_die)\n",
+    "            cur_die = max(plus_die, x_die)\n",
+    "            max_die = max(max_die, cur_die)\n",
     "    \n",
     "    print(f'#{test_case} {max_die}')"
    ]
@@ -484,7 +486,154 @@
    "id": "9f4f41e8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 1979. 어디에 단어가 들어갈 수 있을까\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n, k = map(int, input().split()) # n: 퍼즐 크기, k: 단어 길이\n",
+    "    puzzle = [list(map(int, input().split())) for _ in range(n)] # 1:흰색(빈곳), 0:검은색(벽)\n",
+    "    result = 0\n",
+    "\n",
+    "    # 횡 순회\n",
+    "    for i in range(n):\n",
+    "        blank = 0\n",
+    "        for j in range(n):\n",
+    "            if puzzle[i][j] == 1:\n",
+    "                blank += 1\n",
+    "            else: # 벽 만남\n",
+    "                if blank == k:\n",
+    "                    result += 1\n",
+    "                blank = 0 # 초기화\n",
+    "        \n",
+    "        if blank == k:\n",
+    "            result += 1\n",
+    "    \n",
+    "    # 열 순회\n",
+    "    for j in range(n):\n",
+    "        blank = 0 \n",
+    "        for i in range(n):\n",
+    "            if puzzle[i][j] == 1:\n",
+    "                blank += 1\n",
+    "            else:\n",
+    "                if blank == k:\n",
+    "                    result += 1\n",
+    "                blank = 0\n",
+    "        \n",
+    "        if blank == k:\n",
+    "            result += 1\n",
+    "\n",
+    "    print(f'#{test_case} {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2d9f7a0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1974. 스토쿠 검증\n",
+    "\n",
+    "PUZZLE_SIZE = 9\n",
+    "\n",
+    "# 횡 검사\n",
+    "def row_check(arr):\n",
+    "    for i in range(PUZZLE_SIZE):\n",
+    "        num_count = [0] * (PUZZLE_SIZE + 1)\n",
+    "        for j in range(PUZZLE_SIZE):\n",
+    "            num = arr[i][j]\n",
+    "            num_count[num] += 1\n",
+    "            \n",
+    "            if num_count[num] > 1:\n",
+    "                return False\n",
+    "    return True\n",
+    "\n",
+    "# 열 검사\n",
+    "def col_check(arr):\n",
+    "    for j in range(PUZZLE_SIZE):\n",
+    "        num_count = [0] * (PUZZLE_SIZE + 1)\n",
+    "        for i in range(PUZZLE_SIZE):\n",
+    "            num = arr[i][j]\n",
+    "            num_count[num] += 1\n",
+    "\n",
+    "            if num_count[num] > 1:\n",
+    "                return False\n",
+    "    return True\n",
+    "\n",
+    "# 사각형 검사\n",
+    "def squre_check(arr):\n",
+    "    for i in range(0, PUZZLE_SIZE, 3):\n",
+    "        for j in range(0, PUZZLE_SIZE, 3):\n",
+    "            num_count = [0] * (PUZZLE_SIZE + 1)\n",
+    "            for k in range(3):\n",
+    "                for l in range(3):\n",
+    "                    num = arr[i + k][j + l]\n",
+    "                    num_count[num] += 1\n",
+    "\n",
+    "                    if num_count[num] > 1:\n",
+    "                        return False\n",
+    "    return True\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    puzzle = [list(map(int, input().split())) for _ in range(PUZZLE_SIZE)]\n",
+    "    \n",
+    "    if row_check(puzzle) and col_check(puzzle) and squre_check(puzzle):\n",
+    "        print(f'#{test_case} 1')\n",
+    "    else:\n",
+    "        print(f'#{test_case} 0')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d0da14d9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1209. Sum\n",
+    "ARRAY_SIZE = 5\n",
+    "\n",
+    "def row_sum(arr):\n",
+    "    sums = []\n",
+    "    for i in range(ARRAY_SIZE):\n",
+    "        sums.append(sum(arr[i]))\n",
+    "    \n",
+    "    return max(sums)\n",
+    "\n",
+    "def col_sum(arr):\n",
+    "    sums = []\n",
+    "    for j in range(ARRAY_SIZE):\n",
+    "        col_sum = 0\n",
+    "        for i in range(ARRAY_SIZE):\n",
+    "            col_sum += arr[i][j]\n",
+    "        sums.append(col_sum)\n",
+    "\n",
+    "    return max(sums)\n",
+    "\n",
+    "def diagonal_sum(arr):\n",
+    "    right_dia = 0\n",
+    "    left_dia = 0\n",
+    "\n",
+    "    for i in range(ARRAY_SIZE):\n",
+    "        right_dia += arr[i][i]\n",
+    "    \n",
+    "    for i in range(ARRAY_SIZE, -1, -1):\n",
+    "        left_dia += arr[i][i]\n",
+    "    \n",
+    "    return max(right_dia, left_dia)\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    arr = [list(map(int, input().split())) for _ in range(ARRAY_SIZE)]\n",
+    "\n",
+    "    max_row = row_sum(arr)\n",
+    "    max_col = col_sum(arr)\n",
+    "    max_dia = diagonal_sum(arr)\n",
+    "\n",
+    "    print(f'#{test_case} {max(max_row, max_col, max_dia)}')"
+   ]
   }
  ],
  "metadata": {
