List: SWEA_17문제

--- a/algorithm/1. List_251202(python).ipynb
+++ b/algorithm/1. List_251202(python).ipynb
@@ -593,7 +593,8 @@
    "outputs": [],
    "source": [
     "# 1209. Sum\n",
-    "ARRAY_SIZE = 5\n",
+    "\n",
+    "ARRAY_SIZE = 100\n",
     "\n",
     "def row_sum(arr):\n",
     "    sums = []\n",
@@ -618,14 +619,13 @@
     "\n",
     "    for i in range(ARRAY_SIZE):\n",
     "        right_dia += arr[i][i]\n",
-    "    \n",
-    "    for i in range(ARRAY_SIZE, -1, -1):\n",
-    "        left_dia += arr[i][i]\n",
+    "        left_dia += arr[i][ARRAY_SIZE - i - 1]\n",
     "    \n",
     "    return max(right_dia, left_dia)\n",
     "\n",
-    "T = int(input())\n",
+    "T = 10\n",
     "for test_case in range(1, T + 1):\n",
+    "    case = int(input())\n",
     "    arr = [list(map(int, input().split())) for _ in range(ARRAY_SIZE)]\n",
     "\n",
     "    max_row = row_sum(arr)\n",
