--- a/algorithm/2. Stack_251204.ipynb
+++ b/algorithm/2. Stack_251204.ipynb
@@ -177,17 +177,7 @@
    "execution_count": null,
    "id": "3c050b18",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "#1 5\n",
-      "#2 21\n",
-      "#3 85\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 16505. 종이붙이기\n",
     "\n",
@@ -215,6 +205,171 @@
     "\n",
     "    result = paper(n, memo)\n",
     "    print(f'#{test_case} {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ecd5ef63",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 1219. 길찾기\n",
+    "NODE_NUM = 100\n",
+    "START = 0\n",
+    "GOAL = 99\n",
+    "\n",
+    "def DFS(adj):\n",
+    "    visited = [0] * (NODE_NUM + 1)\n",
+    "    stack = []\n",
+    "\n",
+    "    stack.append(START)\n",
+    "    visited[START] = 1\n",
+    "\n",
+    "    while stack:\n",
+    "        now = stack.pop()\n",
+    "\n",
+    "        if now == GOAL:\n",
+    "            return 1\n",
+    "\n",
+    "        for node in adj[now]:\n",
+    "            if not visited[node]:\n",
+    "                stack.append(node)\n",
+    "                visited[node] = 1\n",
+    "\n",
+    "    return 0\n",
+    "\n",
+    "T = 10\n",
+    "for test_case in range(1, T + 1):\n",
+    "    case_num, road_num = map(int, input().split())\n",
+    "    \n",
+    "    road = list(map(int, input().split()))\n",
+    "    adj_road = [[] for _ in range(NODE_NUM)]\n",
+    "    \n",
+    "    for i in range(road_num):\n",
+    "        start = road[i * 2]\n",
+    "        end = road[i * 2 + 1]\n",
+    "        adj_road[start].append(end)\n",
+    "    \n",
+    "    result = DFS(adj_road)\n",
+    "\n",
+    "    print(f'#{test_case} {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c8735609",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16532. 미로\n",
+    "# 0: 길, 1: 벽, 2: 출발점, 3: 도착점\n",
+    "\n",
+    "def DFS(arr, n, start):\n",
+    "    stack = []\n",
+    "    visited = [[0] * n for _ in range(n)]\n",
+    "    dir = [(-1, 0), (1, 0), (0, -1), (0, 1)] # 상하좌우\n",
+    "\n",
+    "    stack.append(start)\n",
+    "    visited[start[0]][start[1]] = 1\n",
+    "\n",
+    "    while stack:\n",
+    "        now_y, now_x = stack.pop()\n",
+    "\n",
+    "        if arr[now_y][now_x] == '3':\n",
+    "            return 1\n",
+    "\n",
+    "        for dy, dx in dir:\n",
+    "            ny = now_y + dy\n",
+    "            nx = now_x + dx\n",
+    "            if 0 <= ny < n and 0 <= nx < n and not visited[ny][nx]:\n",
+    "                if arr[ny][nx] == '0' or arr[ny][nx] == '3':\n",
+    "                    stack.append((ny, nx))\n",
+    "                    visited[ny][nx] = 1\n",
+    "    return 0\n",
+    "\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n = int(input()) # 미로 크기\n",
+    "    mazz = [input() for _ in range(n)]\n",
+    "\n",
+    "    # 시작점 찾기\n",
+    "    for i in range(n):\n",
+    "        for j in range(n):\n",
+    "            if mazz[i][j] == '2':\n",
+    "                start = (i, j)\n",
+    "                break\n",
+    "\n",
+    "    # 도착 가능 여부 찾기\n",
+    "    result = DFS(mazz, n, start)\n",
+    "\n",
+    "    print(f'#{test_case} {result}')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "17af891f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 16530. Forth\n",
+    "\n",
+    "def calculator(code):\n",
+    "    stack = []\n",
+    "\n",
+    "    for oper in code:\n",
+    "        if oper not in '/*-+.': # 숫자인 경우\n",
+    "            stack.append(int(oper))\n",
+    "\n",
+    "        elif oper == '.':\n",
+    "            if len(stack) == 1:\n",
+    "                return stack.pop()\n",
+    "            else: # 스택이 비어있는 경우\n",
+    "                return 'error'\n",
+    "            \n",
+    "        else: # 연산자인 경우\n",
+    "            if len(stack) < 2: # 연산할 숫자가 없는 경우\n",
+    "                return 'error'\n",
+    "            \n",
+    "            b = stack.pop()\n",
+    "            a = stack.pop()\n",
+    "\n",
+    "            if oper == '+':\n",
+    "                stack.append(a + b)\n",
+    "            elif oper == '-':\n",
+    "                stack.append(a - b)\n",
+    "            elif oper == '*':\n",
+    "                stack.append(a * b)\n",
+    "            else:\n",
+    "                stack.append(a // b)\n",
+    "\n",
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    code = list(map(str, input().split()))\n",
+    "\n",
+    "    result = calculator(code)\n",
+    "\n",
+    "    print(f'#{test_case} {result}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "193959f0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2806. N-Queen\n",
+    "# 내가 푼거 아님\n",
+    "# 작성 중\n",
+    "\n",
+    "def is_safe(arr, row, col):\n",
+    "\n",
+    "    for i in range(row):\n",
+    "        # 열 검사(같은 열에 퀸이 있나?)\n"
    ]
   }
  ],
