--- a/algorithm/2. Stack_251204.ipynb
+++ b/algorithm/2. Stack_251204.ipynb
@@ -363,13 +363,18 @@
    "outputs": [],
    "source": [
     "# 2806. N-Queen\n",
-    "# 내가 푼거 아님\n",
-    "# 작성 중\n",
+    "# 힌트: (DFS) 퀸을 한 행씩 순서대로 배치\n",
+    "# 힌트: (백트래킹) 현재 행의 모든 열에 놓을 수 없다면, 직정 행으로 도랑가 퀸의 위치를 바꾸고 시도\n",
+    "# 힌트: 각 행에 퀸이 놓인 열의 위치만 저장하는 1차원 배열을 사용\n",
+    "# 힌트: 퀸을 놓으려고 할 때, 이전 행들에 놓인 퀸들에게 공격당하지 않는지 검사\n",
     "\n",
-    "def is_safe(arr, row, col):\n",
+    "# 흑.. 다시 공부해..\n",
     "\n",
-    "    for i in range(row):\n",
-    "        # 열 검사(같은 열에 퀸이 있나?)\n"
+    "T = int(input())\n",
+    "for test_case in range(1, T + 1):\n",
+    "    n = int(input()) # 보드 크기 = 놓아야할 퀸의 개수\n",
+    "\n",
+    "    while n > 0:"
    ]
   }
  ],
