Queue:정의, 종류(선형, 원형, 연결, 우선순위), 참고(std::deque vs std::queue, collections.deque 주요함수)

--- a/algorithm/5. Queue_251206.md
+++ b/algorithm/5. Queue_251206.md
@@ -140,5 +140,35 @@
 ### 3. 연결 큐 (Linked Queue)
 - 연결 리스트를 이용해 구현한 큐, 크기를 필요한 만큼 늘리고 줄이는게 가능
 ### 4. 우선순위 큐 (Priority Queue)
-### 참고
-- C++
+- 우선순위를 가진 항목들을 저장하는 큐
+- FIFO 순서가 아니라 우선순위가 높은 순서대로 먼저 출력
+- 적용분야: 시뮬레이션 시스템, 네트워크 트래픽 제어, 운영체제의 테스크 스케쥴링
+
+## 참고
+
+### 1. 🆚 `std::deque` vs. `std::queue` 비교
+
+| 특징 | `std::deque` (Double-Ended Queue) | `std::queue` (Queue Adapter) |
+| :--- | :--- | :--- |
+| **분류** | **컨테이너** (자료를 직접 저장하는 구조) | **컨테이너 어댑터** (기존 컨테이너의 인터페이스를 변경) |
+| **구현 기반** | 동적 배열을 블록 형태로 연결하여 구현 | 기본적으로 **`std::deque`**를 내부 컨테이너로 사용 |
+| **접근 방식** | **양방향** 접근 (앞/뒤 모두 삽입/삭제 가능) | **단방향** 접근 (FIFO 규칙만 강제) |
+| **주요 메서드** | `push_front()`, `pop_front()`, `push_back()`, `pop_back()` | `push()`, `pop()`, `front()`, `back()` |
+| **임의 접근** | **가능** (`[i]`) | **불가능** (오직 `front()`와 `back()`만 접근 가능) |
+| **목적** | **양쪽 끝에서의 $O(1)$ 빠른 삽입/삭제**가 필요할 때 | **FIFO(선입선출) 규칙**을 엄격하게 적용하고 싶을 때 |
+
+### 2.  Python `collections.deque` 주요 함수 (O(1) 연산)
+
+| 연산 유형 | 메서드 | 기능 | 큐/스택 역할 |
+| :--- | :--- | :--- | :--- |
+| **삽입 (Enqueue/Push)** | `append(item)` | 데이터를 **오른쪽 끝(Rear)**에 추가합니다. | 큐(Enqueue) |
+| | `appendleft(item)` | 데이터를 **왼쪽 끝(Front)**에 추가합니다. | 큐/덱(Push Front) |
+| **삭제 (Dequeue/Pop)** | `popleft()` | 데이터를 **왼쪽 끝(Front)**에서 삭제하고 반환합니다. | 큐(Dequeue) |
+| | `pop()` | 데이터를 **오른쪽 끝(Rear)**에서 삭제하고 반환합니다. | 스택(Pop) |
+| **조회 (Peek)** | `[0]` | **가장 앞(Front)**의 데이터를 삭제 없이 조회합니다. | 큐/덱 (Peek Front) |
+| | `[-1]` | **가장 뒤(Rear)**의 데이터를 삭제 없이 조회합니다. | 스택/덱 (Peek Rear) |
+| **초기화** | `deque()` | 빈 `deque` 객체를 생성합니다. | 큐/스택 생성 |
+| **크기** | `len(deque)` | 현재 `deque`에 담긴 요소의 개수를 반환합니다. | Size 확인 |
+| **확인** | `not deque` | 큐가 비어있는지 확인합니다. (`len() == 0`과 동일) | is_empty() |
+| **확장** | `extend(iterable)` | iterable의 요소를 **오른쪽 끝**에 추가합니다. | 대량 삽입 |
+| | `extendleft(iterable)` | iterable의 요소를 **왼쪽 끝**에 추가합니다. | 대량 삽입 |
