DB:Relational(설명, 관련 키워드, DBMS), SQL(FROM, WHERE, GROUP BY, HAVING, SELECT, ORDER BY, LIMIT)

--- a/DB/1.SQL_251210.md
+++ b/DB/1.SQL_251210.md
@@ -83,3 +83,53 @@
     -- _: 단일 문자와 확인 즉 아래 문구는 두글자이면서 끝이 value로 끝나는 레코드를 찾는것
     SELECT select_field FROM table_name WHERE select_field LIKE '__value'
     ```
+    
+    ### GROUP BY
+    ```SQL
+    -- field_name을 그룹화
+    SELECT select_field FROM table_name GROUP BY select_field;
+
+    -- 그룹별로 묶은 총 수를 반환
+    SELECT select_field, COUNT(*) FROM table_name GROUP BY select_field;
+
+    -- 그룹화하여 각 그룹에 대한 value의 평균값 반환
+    SELECT select_field, AVG(value) FROM table_name GROUP BY select_field;
+    ```
+
+    ### HAVING
+    - 집계 항목에 대한 세부 조건을 지정
+    - 주로 GROUP BY와 함께 사용되며 GROUP BY가 없다면 WHERE처럼 동작
+    
+    ||WHERE|HAVING|
+    |:---|:---|:---|
+    |목적|개별 행에 대한 조건을 지정하여 데이터 필터링|GROUP BY에 의해 **그룹화된 결과**에 대해 조건을 지정하여 **그룹을 필터링**|
+    |예시|특정 조건을 만족하는 행 만을 대상으로 집계나 정렬 등의 작업을 수행할 때 사용|그룹별 집계 결과에 조건을 걸어 **특정 그룹만을 선택할 때** 사용|
+    ```SQL
+    -- WHERE
+    SELECT * FROM table_name WHERE value > 30000;
+
+    --- HAVING
+    SELECT select_field, COUNT(*) AS result FROM table_name GROUP BY select_field HAVING result > 5;
+    ```
+
+    ### ORDER BY
+    🚨 NULL 값이 존재할 경우 결과에 NULL이 먼저 출력(오름차순)
+    ```SQL
+    -- 오름차순
+    SELECT select_field FROM table_name ORDER BY select_field;
+
+    -- 내림차순
+    SELECT select_field FROM table_name ORDER BY select_field DESC;
+
+    -- select_field 기준으로 내림차순 정렬 후 select_field2 기준으로 오름차순 정렬
+    SELECT select_field, select_field2 FROM table_name ORDER BY select_field DESC, select_field2
+    ```
+
+    ### LIMIT
+    - 몇개의 데이터를 조회할 것인지 결정
+    ```SQL
+    SELECT select_field FROM table_name ORDER BY select_field LIMIT 7
+
+    --- 4번째부터 7번 데이터만 조회
+    SELECT select_field FROM table_name ORDER BY select_field LIMIT 4,7
+    ```
