--- a/DB/1.SQL_251210.md
+++ b/DB/1.SQL_251210.md
@@ -130,6 +130,6 @@
     ```SQL
     SELECT select_field FROM table_name ORDER BY select_field LIMIT 7
 
-    --- 4번째부터 7번 데이터만 조회
+    --- 앞에서 4개를 건너뛰고 다음 7개의 데이터만 조회
     SELECT select_field FROM table_name ORDER BY select_field LIMIT 4,7
     ```
