JS: 변수 작성 규칙, 변수 선언 키워드(let, const, var), DOM(document 객체, DOM 선택/조작), 용어정리

--- a/JavaScript/1.DOM_251220.md
+++ b/JavaScript/1.DOM_251220.md
@@ -121,7 +121,7 @@
 1. **Node**
     - DOM의 기본 구성 단위
     - Document Node = HTML 문서 전체를 나타내는 노드
-    - Element Node = HTML 요소를 나타내는 노드 (예: <p>)
+    - Element Node = HTML 요소를 나타내는 노드 (예: p 태그)
 
 2. **NodeList**
     - DOM 메서드를 사용해 선택한 Node의 목록
@@ -131,5 +131,5 @@
 
 3. **Element**
     - DOM 트리에서 HTML 요소를 나타내는 특별한 유형의 Node
-    - Node의 하위 유형이며, <p> / <div> / <span> / <body> 등 HTML 태그들이 Element 노드를 생성
+    - Node의 하위 유형이며, p 태그, div 태그, span 태그, body 태그 등 HTML 태그들이 Element 노드를 생성
     - Node의 속성과 메서드를 모두 가지고 있으며 추가적으로 요소 특화된 기능(className, innerHTML, id 등)을 가짐
