--- a/JavaScript/1.DOM_251220.md
+++ b/JavaScript/1.DOM_251220.md
@@ -1,4 +1,4 @@
-> 🚨 ECMAScript 2015 (ES6) 이후의 문법을 기준으로 정리되었습니다.
+> 🚨 ECMAScript 2015 (ES6) 이후의 문법을 기준으로 정리되었습니다
 
 ## JS 변수 작성 규칙
 - 변수명은 반드시 문자, '$', '_'로 시작
