galaxy_ai_ppt: Troubleshooting_260201_설명 추가

--- a/Project_retrospect/Galaxy_AI_PT/TroubleShooting/260201/260201_Issue.md
+++ b/Project_retrospect/Galaxy_AI_PT/TroubleShooting/260201/260201_Issue.md
@@ -30,3 +30,40 @@
 
 * **현상**: 시스템 로그에서 `ActivityManager: Killing ... packageinstaller/reminder` 등 주변 앱을 강제 종료하는 행위 포착.
 * **분석**: 대상 앱이 메모리를 과도하게 점유하자, OS가 이를 살리기 위해 백그라운드 앱들을 정리하는 **'Low Memory Killer' 전조 현상**임. 방치 시 대상 앱 자체가 OOM(Out of Memory)으로 종료될 가능성 100%.
+
+---
+
+새벽부터 고생하며 찾아낸 데이터들을 팀원들에게 설명할 때, **"단순히 렉이 걸려요"**라고 말하는 것보다 **"시스템 리소스의 임계치를 넘어 엔진 전제 조건이 파괴되었습니다"**라고 말하는 것이 훨씬 전문적이고 설득력 있습니다.
+
+README.md에 그대로 활용하시거나, 나중에 팀장님께 기술적인 근거를 제시할 때 참고할 수 있도록 각 결함의 의미와 파급력을 자세히 정리해 드릴게요.
+
+---
+
+## 🛠️ 주요 성능 결함 기술 분석 (설명)
+
+### 1. 메인 스레드 점유 및 7.5초 프리징 (`Skipped 453 frames!`)
+
+안드로이드의 모든 화면 그리기는 **메인 스레드(UI Thread)**에서 일어납니다. 이 스레드는 1초에 60번(약 **16.6ms** 간격) 화면을 갱신해야 합니다.
+
+* **의미**: `Choreographer` 로그는 메인 스레드가 너무 바빠서 화면을 그릴 기회를 놓쳤을 때 발생합니다.
+* **분석**: 453프레임 스킵은 산술적으로 
+![alt text](image.png)
+
+ 동안 화면이 단 한 번도 갱신되지 않고 멈춰 있었음을 뜻합니다.
+* **원인**: 비동기로 처리되어야 할 비트맵 생성 로직이나 MediaPipe 리스너 내부의 상태 업데이트가 메인 스레드 자원을 과도하게 점유하거나, 뒤에서 설명할 **GC 부하**로 인해 CPU가 메인 스레드 작업을 후순위로 밀어냈기 때문입니다.
+
+### 2. LOS(Large Object Space) 기반의 메모리 폭격 및 시스템 정지
+
+안드로이드의 가비지 컬렉터(GC)는 객체의 크기에 따라 관리 구역을 나눕니다. 비트맵처럼 용량이 큰 객체는 **LOS(Large Object Space)**에 할당됩니다.
+
+* **의미**: 로그상에서 `NativeAlloc concurrent copying GC`가 1~2초마다 발생하고 `LOS objects`가 수십 MB씩 해제되고 있다는 것은, 메모리가 비트맵 복사본들로 인해 **쓰레기장**이 되었다는 뜻입니다.
+* **분석**: GC는 메모리를 청소하는 동안 앱의 동작을 일시 정지시키는 **'Stop-the-world'** 현상을 유발합니다. 현재 로그에 찍힌 **200~300ms**의 정지는 실시간 서비스에서 허용 범위를 수십 배 초과한 수치입니다.
+* **원인**: `CameraPage.kt`에서 매 프레임마다 `toBitmap()`과 `createBitmap()`을 중복 호출하면서, 생성된 비트맵을 `recycle()`로 명시적 해제하지 않아 메모리 파편화와 점유율이 극에 달했기 때문입니다.
+
+### 3. 멀티스레드 경합에 의한 타임스탬프 역전 (`Precondition Failed`)
+
+MediaPipe의 실시간 인식 엔진(`detectAsync`)은 입력되는 데이터의 타임스탬프가 반드시 **오름차순(단조 증가)**이어야 한다는 엄격한 전제 조건을 가집니다.
+
+* **의미**: `failed precondition: The received packets having a smaller timestamp than the processed timestamp` 에러는 엔진에 프레임이 **순서대로 들어오지 않았음**을 비명 지르는 것입니다.
+* **분석**: `fixedThreadPool(2)`를 사용하는 환경에서 1번 스레드가 Frame A를, 2번 스레드가 Frame B를 처리할 때, Frame B의 물리적 회전 연산이 더 빨리 끝나버리면 엔진에는 **B가 A보다 먼저 전달**됩니다.
+* **결과**: 엔진은 이를 '논리적 오류'로 판단하여 **분석을 중단(Tracking Drop)**합니다. 손 트래킹이 갑자기 멈추는 현상의 결정적 원인이며, 이는 연산이 무겁고 순서 보장이 안 되는 현재 아키텍처의 구조적 결함입니다.
